added es6 classes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!-- IMPORTANT
 
 Open Chrome from Terminal with following command:
-	open /Applications/Google\ Chrome.app --args --allow-file-access-from-files
- -->
+	open /Applications/Google\ Chrome.app --args --allow-file-access-from-files-->
 <!DOCTYPE html>
 <html>
 <head>
