--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@ Open Chrome from Terminal with following command:
 	<title>ThreeJs</title>
 </head>
 
-	<script src="js/three.min.js"></script>
-	<script src="js/physi.js"></script>
-	<script src="js/ammo.js"></script>
 
 <body>
 		
 		<div id="viewport"></div>
+		<script src="node_modules/whs/build/whitestorm.js"></script>
+		<script src="js/three.min.js"></script>
+		<script src="js/physi.js"></script>
+		<script src="js/ammo.js"></script>
+		<!-- ThreeJS -->
 		<script src="js/main.js"></script>	
+		<!-- WhiteStormJS -->
+		<!-- <script src="js/wh-main.js" -->
 
 </body>
 </html>
