--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@ Open Chrome from Terminal with following command:
 		<script src="js/three.min.js"></script>
 		<script src="js/physi.js"></script>
 		<script src="js/ammo.js"></script>
-		<!-- ThreeJS -->
+		<!-- Version A: ThreeJS -->
+		<script src="js/classes/Character.js"></script>	
+		<script src="js/classes/World.js"></script>	
+		<script src="js/classes/Scene.js"></script>	
 		<script src="js/main.js"></script>	
-		<!-- WhiteStormJS -->
+		<!-- Version B: WhiteStormJS -->
 		<!-- <script src="js/wh-main.js" -->
 
 </body>
