Minor tweaks and refactoring

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@ Open Chrome from Terminal with following command:
 		<script src="js/physi.js"></script>
 		<script src="js/ammo.js"></script>
 		<!-- Version A: ThreeJS -->
+		<script src="js/setGlobals.js"></script>	
 		<script src="js/classes/Character.js"></script>	
 		<script src="js/classes/World.js"></script>	
+		<script src="js/classes/Box.js"></script>	
+		<script src="js/classes/TestSphere.js"></script>	
 		<script src="js/classes/Scene.js"></script>	
 		<script src="js/main.js"></script>	
 		<!-- Version B: WhiteStormJS -->
